--- a/slides/GisDeepLearning_NUK/index.html
+++ b/slides/GisDeepLearning_NUK/index.html
@@ -25,7 +25,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="./slides/nuk.md"
+				<section data-markdown="slides/nuk.md"
                          data-separator="^\n---\n"
                          data-separator-vertical="^\n--\n"
                          data-separator-notes="^Note:"
